Updated testDisabledKafkaProducer() test method